--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-themes": "^0.4.6",
+    "quill": "^2.0.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.7.0",
     "sonner": "^2.0.7",
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
